[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Valiev T.M. <cptchunk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
flake8-builtins = "^2.2.0"
flake8-commas = "^2.1.0"
isort = "^5.13.2"
flake8-docstrings = "^1.7.0"
mccabe = "^0.7.0"
pep8-naming = "^0.13.3"
pycodestyle = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
